Remove overlap class to avoid change of shape

--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -106,10 +106,6 @@ ul.nav.nav-pills.nav-flush.flex-column.mb-auto.text-center {
   width: 50px;
   height: 50px;
 } //This is for the circle shape of the icon pills
-.nav-link:hover {
-  border-bottom: 3px solid blue; /* Blue 3px bottom border */
-  border-radius: 4px; /* Rounded corners */
-}
 .py-3 { padding-top: 0.7rem!important;}
 //Target home svg color
 svg.home.i-color {fill: $background-color;}
